# bazel-lib

./: deps.bzl  go.mod  go.sum
lib/: BUILD.bazel  dearmor_gpg_key.bzl  dearmor_pem_file.bzl
lib/private/: BUILD.bazel  dearmor_gpg_key.bzl  dearmor_gpg_key.sh.tpl  dearmor_pem_file.bzl
lib/tests/dearmor_gpg_key/: BUILD.bazel  test_public_key.gpg
lib/tests/dearmor_pem_file/: BUILD.bazel  test_private_key.pem  test_public_key.pem
tools/dearmor_gpg_key/: BUILD.bazel  main.go
tools/dearmor_pem_file/: BUILD.bazel  main.go
