load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dearmor_gpg_key_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/bazel-lib/tools/dearmor_gpg_key",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_crypto//openpgp"],
)

go_binary(
    name = "dearmor_gpg_key",
    embed = [":dearmor_gpg_key_lib"],
    visibility = ["//visibility:public"],
)
