"Tests for dearmor_gpg_file"

load("//lib:dearmor_pem_file.bzl", "dearmor_pem_file")
load("//lib:testing.bzl", "assert_contains")

dearmor_pem_file(
    name = "debian_bookworm_key",
    key = ":debian_bookworm_signing_key.gpg",
)

genrule(
    name = "debian_keystrings",
    srcs = [":debian_bookworm_key"],
    outs = ["debian_keystrings.txt"],
    cmd = "cat $(location :debian_bookworm_key) | strings > $@",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

assert_contains(
    name = "debian_bookworm_key_binary",
    actual = ":debian_keystrings.txt",
    expected = "Debian Stable Release Key",
)

dearmor_pem_file(
    name = "microsoft_packages_keystrings_asc",
    key = ":microsoft_packages.asc",
)

genrule(
    name = "microsoft_packages_keystrings",
    srcs = [":microsoft_packages_keystrings_asc"],
    outs = ["microsoft_packages_keystrings.txt"],
    cmd = "cat $(location :microsoft_packages_keystrings_asc) | strings > $@",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

assert_contains(
    name = "microsoft_packages_key_binary",
    actual = ":microsoft_packages_keystrings.txt",
    expected = "Microsoft (Release signing) <gpgsecurity@microsoft.com>",
)
